manifests/service.yaml
# Exposes your pods inside the cluster.
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel-prod
spec:
  selector:
    app: laravel  # This matches the label set by the Deployment's pods
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
    - protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer  # exposed via an external load balancer (Like GCP, AWS, etc.). The load balancer will route traffic to the service, and it is typically used for production environments.
